# arithmetics

./: .bumpversion.cfg  .readthedocs.yml  README.md  setup.cfg  tox.ini
.github/workflows/: tox.yml
docs/source/: conf.py  index.rst  installation.rst
docs/source/arithmetics/: index.rst  operations.rst
src/arithmetics/: __init__.py  operations.py  version.py
src/arithmetics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_operations.py  test_version.py
