##########################
# Setup.py Configuration #
##########################
[metadata]
name = arithmetics
version = 2.0.0-dev
description = A package for basic arithmetic operations
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/davidmeijer/arithmetics
download_url = https://github.com/davidmeijer/arithmetics/releases
project_urls =
    Tracker = https://github.com/davidmeijer/arithmetics/issues
    Source = https://github.com/davidmeijer/arithmetics
    Documentation = https://arithmetics.readthedocs.io

# Author information
author = David Meijer
author_email = david.meijer@wur.nl
maintainer = David Meijer
maintainer_email = david.meijer@wur.nl

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords =
    snekpack
    cookiecutter
    arithmetics

[options]
install_requires =
    tqdm

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    tox
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
    autodoc_pydantic
    # To include LaTeX comments easily in your docs
    texext

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#######################
# MyPy Configuration  #
#######################
[mypy]
plugins = pydantic.mypy

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # pickle
    S301
    # pickle
    S403
    S404
    S603
    # Line break before binary operator (conflicts with black)
    W503
    # Multiple statements on one line (conflicts with black)
    E704
    # whitespace before ':'  (conflicts with black)
    E203
    # Requests call without timeout
    S113
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    arithmetics
    tests